--- a/iTuneConnect-Info.plist
+++ b/iTuneConnect-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>iconconcept-iPhone.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.newmediageekz.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
