Minor UI Tweaks.

--- a/iTuneConnect-Info.plist
+++ b/iTuneConnect-Info.plist
@@ -28,5 +28,7 @@
 	<string>MainWindow</string>
 	<key>UIRequiresPersistentWiFi</key>
 	<true/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackTranslucent</string>
 </dict>
 </plist>
