--- a/iTuneConnect-Info.plist
+++ b/iTuneConnect-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>iconconcept-iPhone.png</string>
+	<string>Icon.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.newmediageekz.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -30,5 +30,7 @@
 	<true/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleBlackTranslucent</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 </dict>
 </plist>
